--- a/manifest.plist
+++ b/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/279961172/CEGTest.git</string>
+					<string>https://github.com/279961172/CEGTest/raw/master/CEG.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://github.com/279961172/CEGTest.git</string>
+					<string>https://github.com/279961172/CEGTest/raw/master/57Image.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://github.com/279961172/CEGTest.git</string>
+					<string>https://github.com/279961172/CEGTest/raw/master/512Image.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
